# kash

./: .gitmodules  Cargo.toml  LICENSE  justfile
.claude/: settings.json
.claude-memories/: MEMORY.md  feedback_first_party_util_stability.md  feedback_no_async_await_until_posix.md  feedback_not_a_remake.md  feedback_one_test_at_a_time_when_hang_suspected.md  last-session-id  project_kash_abbreviations.md  project_kash_config.md  project_kash_first_party_utils.md  project_kash_history.md  project_kash_implementation.md  project_kash_interactive.md  project_kash_module_resolution.md  project_kash_oop_extensions.md  project_kash_prompt.md  project_kash_sandbox.md  project_kash_security_policy.md  project_kash_std_typeclasses.md  project_kash_sweep_v1.md  project_kash_venv.md  project_kash_versioning.md  project_lightnht_optimizations.md  project_shell_arithmetic.md  project_shell_arrays.md  project_shell_builtins.md  project_shell_compound_vars.md  project_shell_design.md  project_shell_expansion_flags.md  project_shell_function_scope.md  project_shell_glob_pattern.md  project_shell_io_redirection.md  project_shell_job_control.md  project_shell_mode_syntax.md  project_shell_modes.md  project_shell_namespace.md  project_shell_quote_handling.md  project_shell_set_options.md  project_shell_subshell_pipeline.md  project_shell_transpiler.md  project_shell_trap_signal.md  (+2 more)
docs/: 00-overview.md  01-modes.md  02-mode-syntax.md  03-function-scope.md  04-arrays.md  05-compound-vars.md  06-expansion-flags.md  07-glob-pattern.md  08-typeset.md  09-typeclass.md  10-namespace.md  11-subshell-pipeline.md  12-transpiler.md  13-io-redirection.md  14-first-party-utils.md  15-set-options.md  16-trap-signal.md  17-job-control.md  18-builtins.md  19-interactive.md  20-config.md  21-implementation.md  22-prompt.md  23-history.md  24-oop-extensions.md  25-quote-arithmetic.md  26-security-policy.md  27-std-typeclasses.md  28-sweep-v1.md  29-abbreviations.md  30-module-resolution.md  INDEX.md  MODE-MATRIX.md  PRINCIPLES.md  V2-ROADMAP.md
kash/: Cargo.toml
kash-core/: Cargo.toml
kash-core/src/: ast.rs  capability.rs  collections.rs  error.rs  eval.rs  lexer.rs  lib.rs  mode.rs  parser.rs  scope.rs  value.rs
kash-core/tests/: bench_backends.rs
kash-gadt/: Cargo.toml
kash-gadt/src/: lib.rs
kash-macros/: Cargo.toml
kash-macros/src/: lib.rs
kash/src/: main.rs
lightnht/: Cargo.toml
lightnht/src/: lib.rs
