[workspace]
resolver = "3"
members = [
    "kash-macros",
]
# `kash-line-editor` is a submodule with its own `[workspace]` (because it
# tracks upstream rustyline and embeds the rustyline-derive subcrate). Kash
# workspace members depend on it via `path = "../kash-line-editor"` instead.
exclude = [
    "kash-line-editor",
]

[workspace.package]
version = "0.1.0-posix2024-pre"
edition = "2024"
license = "MIT"
authors = ["윤병익 <yeun0908@gmail.com>"]
repository = "https://github.com/newsniper-org/kash"
