[package]
name = "kash-core"
description = "Core shell engine for the kash project (parser, evaluator, mode system, builtins)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[features]
# Project-wide policy: kash workspace crates default to no_std + alloc.
# Consumers (kash-bin, downstream embedders) explicitly opt into `std`
# when they need filesystem, environment, threads, signals, terminal IO.
default = ["alloc"]
std = ["alloc", "kash-gadt/std", "dep:toml"]
# `alloc` enables heap-allocated containers (Vec/String/Box/etc.) without
# requiring the rest of the standard library. The engine fundamentally
# needs a heap, so bare-`no_std` (neither feature) is rejected by a
# `compile_error!` in lib.rs.
alloc = ["kash-gadt/alloc"]

[dependencies]
kash-gadt = { path = "../kash-gadt", default-features = false }
kash-macros = { path = "../kash-macros", default-features = false }
# TOML config loader for venv `load-config PATH` (v.5). Strict data
# format — never executable, never source-able. Std-only because
# `toml` itself needs std.
toml = { version = "0.8", optional = true, default-features = false, features = ["parse"] }

[dev-dependencies]
# Used by the backend-comparison integration test in `tests/`. The
# engine itself does not depend on `lightnht`; the test plumbs it
# in as one of the candidate `MapBackend`s.
lightnht = { path = "../lightnht" }
