[package]
name = "kash-macros"
description = "Shared declarative macros for the kash shell project (ifstd!, etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

# This crate has no features of its own. The `ifstd!`/`ifalloc!` macros
# emit `#[cfg(feature = "std")]` / `#[cfg(feature = "alloc")]` attributes
# that are evaluated in the *invoking* crate's context. Doc-tests are
# written to be std/alloc-agnostic.
